--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -100,17 +100,18 @@ input[type=text3] {
   text-align: center;
 }
 
-@media (max-width: 768px) {
+
+.ordercard {
+
+}
+
+@media (max-width: 600px) {
   .sub-box {
     flex: 100%;
     padding: 10px;
-
-
-
   }
 
   .card {
-    position: relative;
     width: 100%;
     font-size: 1em;
     border-radius: 15px;
@@ -120,7 +121,7 @@ input[type=text3] {
     display: flex;
     flex-direction: column;
     grid-gap: 10px; 
-    height: 300px;
+    height: 350px;
    }
 
 
@@ -129,7 +130,6 @@ input[type=text3] {
     max-height: 100px;
     margin: 10%;
     object-fit: contain;
-    
   }
 }
 
