--- a/src/css/Profile.module.css
+++ b/src/css/Profile.module.css
@@ -49,7 +49,7 @@
 .profileButtons button {
     padding: 10px 20px;
     border: none;
-    background-color: #628C63;
+    background-color: #064D42;
     color: white;
     cursor: pointer;
     border-radius: 5px;
